Fixed shifting, with triangle buttons that change color when hovered

--- a/mainsite/static/rpg/rpgmaker.css
+++ b/mainsite/static/rpg/rpgmaker.css
@@ -1,3 +1,5 @@
+/* General RPGMaker CSS */
+
 .btn
 {
 	font-family: 'Raleway', cursive;
@@ -8,41 +10,38 @@
 	margin-top: 0px;
 	border: 4px solid rgba(0,0,0,0);
 }
+
 .btn:hover
 {
 	background-color: #4da6ff;
 	color: #ffffff;
 }
+
 /* Creates the transparent white border when selected */
 .btn[selected=selected]
 {
 	border: 4px solid rgba(255, 255, 255, 0.5);
 }
+
 h1
 {
 	font-family: 'Press Start 2P', cursive;
 }
+
 canvas
 {
 	margin-top: 0px;
 	margin-bottom: 0px;
 	height: 500px;
 }
+
 .btn > canvas
 {
 	height: 40px;
 	width: 40px;
 }
 
-/* Sets up the art setup of three canvases */
-#art-canvas-canvas
-{
-	float: left;
-}
-#art-side-canvases
-{
-	display: inline-block;
-}
+
 
 #l1-btn
 {
@@ -56,6 +55,15 @@ canvas
 {
 	background-color: #ff66cc;
 }
+
+#lvl-edtr-b-group
+{
+	margin-bottom: 5px;
+}
+
+
+
+/* Dialog Page */
 
 .dialog-line
 {
@@ -101,7 +109,9 @@ canvas
 	margin-top: 10px;
 }
 
-/* used for gorizontal scrolling buttons */
+
+
+/* used for horizontal scrolling buttons */
 .btn-group-horizontal
 {
 	margin-left: 0px;
@@ -117,7 +127,10 @@ canvas
 	padding-bottom: 15px;
 	box-sizing: border-box;
 }
-/* this loading screen */
+
+
+
+/* the loading screen */
 
 #loading
 {
